--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,8 @@
-// Начните писать стили здесь
+// Gobal
+
+@import "global\variables.less";
+@import "global\global.less";
+@import "global\fonts.less";
+
+
+// Blocks
