--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,8 +1,15 @@
 // Gobal
 
-@import "global\variables.less";
-@import "global\global.less";
-@import "global\fonts.less";
+@import "global/variables.less";
+@import "global/global.less";
+@import "global/fonts.less";
+@import "global/colors.less";
+@import "global/mixins.less";
 
 
 // Blocks
+
+@import "blocks/page.less";
+@import "blocks/page-body.less";
+@import "blocks/page-header.less";
+@import "blocks/main-nav.less";
