Доверстал Индекс до футера

--- a/source/less/blocks/page-body.less
+++ b/source/less/blocks/page-body.less
@@ -1,10 +1,11 @@
 .page-body {
+  .center-1();
+  .outline(@green);
   background-color: @white;
   min-height: 100%;
   width: 320px;
-  margin: 0 auto;
   display: grid;
   grid-template-rows: min-content 1fr min-content;
-
+  
 
 }
