--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,3 +1,18 @@
+
+.page-header__wrapper {
+  .center-2();
+  .flex();
+  justify-content: space-between;
+  padding-bottom:  15px;
+  padding-top: 15px;
+  
+
+}
+
+
+
+
+
 .main-nav__toggle {
   display: block;
   width: 24px;
