--- a/source/less/global/fonts.less
+++ b/source/less/global/fonts.less
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&display=swap');
