--- a/source/less/global/mixins.less
+++ b/source/less/global/mixins.less
@@ -14,24 +14,117 @@
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
 }
 
-.font_oswald-black() {
+.font_oswald-black-norm(@font; @line) {
   font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
+  font-weight: 400;
   color: @black;
+  font-size: @font;
+  line-height: @line;
 
 }
 
-.font_oswald-white() {
+.font_oswald-black-big(@font; @line) {
   font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
-  color: @white;
+  font-weight: 400;
+  color: @black;
+  font-size: @font;
+  line-height: @line;
+  text-transform: uppercase;
 
 }
 
-.font_arial() {
+.font_oswald-black-medium(@font; @line) {
+  font-family: "Oswald", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  color: @black;
+  font-size: @font;
+  line-height: @line;
+
+}
+
+.font_oswald-white-norm(@font; @line) {
+  font-family: "Oswald", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  color: @white;
+  font-size: @font;
+  line-height: @line;
+
+
+}
+
+.font_oswald-white-big(@font; @line) {
+  font-family: "Oswald", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  color: @white;
+  font-size: @font;
+  line-height: @line;
+  text-transform: uppercase;
+  
+
+}
+
+.font_arial(@font; @line) {
   font-family: "Arial", sans-serif;
   font-style: normal;
+  font-weight: 400;
   color: @special_dark-grey;
+  font-size: @font;
+  line-height: @line;
 
 }
 
+.center-1() {
+  margin: 0 auto;
+
+}
+
+.center-2() {
+  padding: 0 20px;
+  box-sizing: border-box;
+
+}
+
+.flex() {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+.outline(@color: @black) {
+  outline: 3px solid @color;
+  outline-offset: -3px;
+}
+
+.list-style() {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.button() {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 280px;
+  height: 40px;
+  background-color: @basic_green;
+
+}
+
+.features-after() {
+  display: block;
+  position: absolute;
+  width: 35px;
+  height: 35px;
+  left: 13px;
+  bottom: 10px;
+}
