--- a/source/less/style.less
+++ b/source/less/style.less
@@ -13,3 +13,9 @@
 @import "blocks/page-body.less";
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
+@import "blocks/page-main.less";
+@import "blocks/promo.less";
+@import "blocks/title-main.less";
+@import "blocks/program.less";
+@import "blocks/features.less";
+@import "blocks/example.less";
