--- a/source/less/style.less
+++ b/source/less/style.less
@@ -15,7 +15,9 @@
 @import "blocks/main-nav.less";
 @import "blocks/page-main.less";
 @import "blocks/promo.less";
-@import "blocks/title-main.less";
 @import "blocks/program.less";
 @import "blocks/features.less";
 @import "blocks/example.less";
+@import "blocks/contacts.less";
+@import "blocks/location.less";
+@import "blocks/page-footer.less";
