--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -4,37 +4,32 @@
 
   &__wrapper {
     .center-1;
-
-
   }
+
 
   &__list {
     .flex();
     flex-direction: column;
-    align-items: stretch;
-
+    align-items   : stretch;
   }
 
   &__list--style {
     .list-style();
     .font_oswald-black-medium(20px; 20px);
-    
   }
+
 
   &__item--style {
     border-bottom: 1px solid @special_white;
-
   }
+
 
   &__link--style {
-    display: block;
-    height: 66px;
-    padding: 23px;
+    .flex;
+    height    : 66px;
+    padding   : 23px;
     box-sizing: border-box;
-
   }
 
-
+  
 }
-
-
