--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,28 +1,31 @@
+.page-header {
 
-.page-header__wrapper {
-  .center-2();
-  .flex();
-  justify-content: space-between;
-  padding-bottom:  15px;
-  padding-top: 15px;
+
+  &__wrapper {
+    .center-2();
+    .flex(space-between; center);
+    padding-bottom: 15px;
+    padding-top   : 15px;
+  }
+
+
+  &__logo {
+    .flex(space-between);
+    flex-basis: calc(100% / 3 * 2);
+  }
+
+
+  &__toggle {
+    display            : block;
+    width              : 24px;
+    height             : 16px;
+    background-image   : url("../img/open-toggle.svg");
+    background-color   : @white;
+    background-repeat  : no-repeat;
+    background-position: center;
+    border-left        : none;
+    border-right       : none;
+  }
+
   
-
-}
-
-
-
-
-
-.main-nav__toggle {
-  display: block;
-  width: 24px;
-  height: 16px;
-  background-image: url("../img/open-toggle.svg");
-  background-color: @white;
-  background-repeat: no-repeat;
-  background-position: center;
-  border-left: none;
-  border-right: none;
-  
-
 }
