Исправил ошибки в оформлении стилей

--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -1,5 +1,4 @@
 .features {
-
   &__wrapper {
     .center-1;
     .center-2;
@@ -35,7 +34,7 @@
     width: 60px;
     height: 60px;
     background-color: @basic_green;
-    left: 0px;
+    left: 0;
     bottom: -3px;
   }
 
@@ -66,5 +65,4 @@
   &__description--style {
     .font_arial(14px; 18px);
   }
-
 }
