--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,5 +1,4 @@
 .page-footer {
-
   &__wrapper {
     .center-1;
     .center-2;
@@ -37,7 +36,6 @@
     height: 34px;
     background: url("../img/html-academy_logo.svg") no-repeat center;
     bottom: 20px;
-    right: 0px;
+    right: 0;
   }
-
 }
