--- a/source/less/global/mixins.less
+++ b/source/less/global/mixins.less
@@ -1,17 +1,16 @@
 .shadow_normal() {
-  background: #C4C4C4;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16);
-
+  background: #c4c4c4;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.16);
 }
 
 .shadow_hover() {
-  background: #C4C4C4;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.19);
+  background: #c4c4c4;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.19);
 }
 
 .shadow_pressed() {
-  background: #C4C4C4;
-  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+  background: #c4c4c4;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
 }
 
 .font_oswald-black-norm(@font; @line) {
@@ -21,7 +20,6 @@
   color: @black;
   font-size: @font;
   line-height: @line;
-
 }
 
 .font_oswald-black-big(@font; @line) {
@@ -32,7 +30,6 @@
   font-size: @font;
   line-height: @line;
   text-transform: uppercase;
-
 }
 
 .font_oswald-black-medium(@font; @line) {
@@ -42,7 +39,6 @@
   color: @black;
   font-size: @font;
   line-height: @line;
-
 }
 
 .font_oswald-white-norm(@font; @line) {
@@ -52,8 +48,6 @@
   color: @white;
   font-size: @font;
   line-height: @line;
-
-
 }
 
 .font_oswald-white-big(@font; @line) {
@@ -64,8 +58,6 @@
   font-size: @font;
   line-height: @line;
   text-transform: uppercase;
-
-
 }
 
 .font_arial(@font; @line) {
@@ -75,18 +67,15 @@
   color: @special_dark-grey;
   font-size: @font;
   line-height: @line;
-
 }
 
 .center-1() {
   margin: 0 auto;
-
 }
 
 .center-2() {
   padding: 0 20px;
   box-sizing: border-box;
-
 }
 
 .flex(@justify-content: center; @align-items: stretch) {
@@ -94,10 +83,7 @@
   flex-wrap: wrap;
   justify-content: @justify-content;
   align-items: @align-items;
-
 }
-
-
 
 .outline(@color: @black) {
   outline: 1px solid @color;
@@ -118,7 +104,6 @@
   width: 280px;
   height: 40px;
   background-color: @basic_green;
-
 }
 
 .features-after() {
