--- a/source/less/global/colors.less
+++ b/source/less/global/colors.less
@@ -14,6 +14,7 @@
 @black: #000000;
 @white: #ffffff;
 @special_white: #E6E6E6;
+@special_white-2: #E7E7E7;
 
 // Outline-colors
 
@@ -21,3 +22,5 @@
 @green: #13a520;
 @yellow: #d0ff00;
 @blue: #0000ff;
+@orange:#ff8800;
+@pink: #ff00dd;
