--- a/source/less/global/mixins.less
+++ b/source/less/global/mixins.less
@@ -22,11 +22,30 @@
   line-height: @line;
 }
 
+.font_oswald-grey-norm(@font; @line) {
+  font-family: "Oswald", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  color: @special_dark-grey;
+  font-size: @font;
+  line-height: @line;
+}
+
 .font_oswald-black-big(@font; @line) {
   font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   color: @black;
+  font-size: @font;
+  line-height: @line;
+  text-transform: uppercase;
+}
+
+.font_oswald-grey-big(@font; @line) {
+  font-family: "Oswald", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  color: @special_dark-grey;
   font-size: @font;
   line-height: @line;
   text-transform: uppercase;
@@ -76,6 +95,11 @@
 .center-2() {
   padding: 0 20px;
   box-sizing: border-box;
+}
+
+.center-3() {
+  margin: 0;
+  padding: 0;
 }
 
 .flex(@justify-content: center; @align-items: stretch) {
