--- a/source/less/style.less
+++ b/source/less/style.less
@@ -5,17 +5,22 @@
 @import "global/colors.less";
 @import "global/mixins.less";
 
-// Blocks
+// blocks/index
 
-@import "blocks/page.less";
-@import "blocks/page-body.less";
-@import "blocks/page-header.less";
-@import "blocks/main-nav.less";
-@import "blocks/page-main.less";
-@import "blocks/promo.less";
-@import "blocks/program.less";
-@import "blocks/features.less";
-@import "blocks/example.less";
-@import "blocks/contacts.less";
-@import "blocks/location.less";
-@import "blocks/page-footer.less";
+@import "blocks/index/page.less";
+@import "blocks/index/page-body.less";
+@import "blocks/index/page-header.less";
+@import "blocks/index/main-nav.less";
+@import "blocks/index/page-main.less";
+@import "blocks/index/promo.less";
+@import "blocks/index/program.less";
+@import "blocks/index/features.less";
+@import "blocks/index/example.less";
+@import "blocks/index/contacts.less";
+@import "blocks/index/location.less";
+@import "blocks/index/page-footer.less";
+
+//blocks/form
+
+@import "blocks/form/page-form.less";
+@import "blocks/form/form.less";
