--- a/source/less/blocks/index/page-main.less
+++ b/source/less/blocks/index/page-main.less
@@ -11,4 +11,14 @@
     padding-top: 30px;
     text-align: center;
   }
+
+  &__title--catalog {
+    .font_oswald-black-norm(36px; 36px);
+    .center-1();
+    padding-top: 40px;
+    padding-bottom: 40px;
+    border-bottom: 1px solid @special_grey-1;
+  }
+
+
 }
