--- a/source/less/blocks/index/page-main.less
+++ b/source/less/blocks/index/page-main.less
@@ -14,11 +14,10 @@
 
   &__title--catalog {
     .font_oswald-black-norm(36px; 36px);
-    .center-1();
+    .center-2();
     padding-top: 40px;
     padding-bottom: 40px;
     border-bottom: 1px solid @special_grey-1;
+    justify-content: flex-start;
   }
-
-
 }
