--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,6 +4,7 @@
 @import "global/fonts.less";
 @import "global/colors.less";
 @import "global/mixins.less";
+@import "global/variables.less";
 
 // blocks/index
 
@@ -20,7 +21,13 @@
 @import "blocks/index/location.less";
 @import "blocks/index/page-footer.less";
 
-//blocks/form
+// blocks/form
 
 @import "blocks/form/page-form.less";
 @import "blocks/form/form.less";
+
+// bloks/catalog
+
+@import "blocks/catalog/basic-products.less";
+@import "blocks/catalog/additional-products.less";
+@import "blocks/catalog/present.less";
