--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -9,3 +9,14 @@
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
 }
+
+.button {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 280px;
+  height: 40px;
+  background-color: @basic_green;
+  border-style: none;
+}
