--- a/source/less/global/colors.less
+++ b/source/less/global/colors.less
@@ -1,20 +1,20 @@
 // Basic-colors
 
 @basic_green: #68B738;
-@basic_green-2: #5EAA2F;
+@basic_green_2: #5EAA2F;
 @basic_grey: #F2F2F2;
 @special_grey: #CDCDCD;
-@special_grey-1: #EBEBEB;
-@special_grey-2: #666666;
-@special_grey-3: #D9D9D9;
-@special_grey-4: #EAEAEA;
-@special_dark-grey: #444444;
-@special_dark-grey-2: #222222;
+@special_grey_1: #EBEBEB;
+@special_grey_2: #666666;
+@special_grey_3: #D9D9D9;
+@special_grey_4: #EAEAEA;
+@special_dark_grey: #444444;
+@special_dark_grey_2: #222222;
 @status_error: #FF8282;
 @black: #000000;
 @white: #ffffff;
 @special_white: #E6E6E6;
-@special_white-2: #E7E7E7;
+@special_white_2: #E7E7E7;
 
 // Outline-colors
 
