--- a/source/less/style.less
+++ b/source/less/style.less
@@ -8,26 +8,26 @@
 
 // blocks/index
 
-@import "blocks/index/page.less";
-@import "blocks/index/page-body.less";
-@import "blocks/index/page-header.less";
-@import "blocks/index/main-nav.less";
-@import "blocks/index/page-main.less";
-@import "blocks/index/promo.less";
-@import "blocks/index/program.less";
-@import "blocks/index/features.less";
-@import "blocks/index/example.less";
-@import "blocks/index/contacts.less";
-@import "blocks/index/location.less";
-@import "blocks/index/page-footer.less";
+@import "blocks/page.less";
+@import "blocks/page-body.less";
+@import "blocks/page-header.less";
+@import "blocks/main-nav.less";
+@import "blocks/page-main.less";
+@import "blocks/promo.less";
+@import "blocks/program.less";
+@import "blocks/features.less";
+@import "blocks/example.less";
+@import "blocks/contacts.less";
+@import "blocks/location.less";
+@import "blocks/page-footer.less";
 
 // blocks/form
 
-@import "blocks/form/page-form.less";
-@import "blocks/form/form.less";
+@import "blocks/page-form.less";
+@import "blocks/form.less";
 
 // bloks/catalog
 
-@import "blocks/catalog/basic-products.less";
-@import "blocks/catalog/additional-products.less";
-@import "blocks/catalog/present.less";
+@import "blocks/basic-products.less";
+@import "blocks/additional-products.less";
+@import "blocks/present.less";
