--- a/source/less/blocks/location.less
+++ b/source/less/blocks/location.less
@@ -10,3 +10,10 @@
   background-repeat: no-repeat;
   background-position: top 139px left 134px, center;
 }
+
+@media (min-width: @tablet-width) {
+  .location__map--style {
+    width: 768px;
+    height: 400px;
+  }
+}
