--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -9,6 +9,13 @@
   .font_oswald-white-norm(36px; 36px);
   padding-top: 30px;
   text-align: center;
+
+  @media (min-width: @tablet-width) {
+    .font_oswald-black-norm(60px; 60px);
+    text-align: start;
+    width: 528px;
+    padding-bottom: 30px;
+  }
 }
 
 .page-main__title--catalog {
