--- a/source/less/global/mixins.less
+++ b/source/less/global/mixins.less
@@ -97,6 +97,11 @@
   box-sizing: border-box;
 }
 
+.padding-tablet() {
+  padding: 0 30px;
+  box-sizing: border-box;
+}
+
 .reset-indents() {
   margin: 0;
   padding: 0;
