--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -5,6 +5,13 @@
   justify-content: space-between;
   padding-top: 30px;
   padding-bottom: 30px;
+
+  @media (min-width: @tablet-width) {
+    width: 768px;
+    .padding-tablet;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
 }
 
 .contacts__invite {
