--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,15 +1,28 @@
 .main-nav {
-  display: blok;
+  display: none;
+
+  @media (min-width: @tablet-width) {
+    display: block;
+  }
 }
 
 .main-nav__wrapper {
   .margin-auto;
+
+  @media (min-width: @tablet-width) {
+    margin: 0 0;
+  }
 }
 
 .main-nav__list {
   .flex();
   flex-direction: column;
   align-items: stretch;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 
 .main-nav__list--style {
@@ -17,8 +30,18 @@
   .font_oswald-black-medium(20px; 20px);
 }
 
+@media (min-width: @tablet-width) {
+  .main-nav__list--style {
+    .font_oswald-black-big(18px; 24px);
+  }
+}
+
 .main-nav__item--style {
   border-bottom: 1px solid @special_white;
+
+  @media (min-width: @tablet-width) {
+    border-bottom: none;
+  }
 }
 
 .main-nav__link--style {
@@ -26,4 +49,10 @@
   height: 66px;
   padding: 23px;
   box-sizing: border-box;
+}
+
+@media (min-width: @tablet-width) {
+  .main-nav__link {
+    padding-right: 0;
+  }
 }
