--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,5 +1,18 @@
 .page-header {
   border-bottom: 1px solid @special_grey_3;
+
+  @media (min-width: @tablet-width) {
+    border-bottom: none;
+  }
+}
+
+.page-header__container {
+  @media (min-width: @tablet-width) {
+    .flex(space-between);
+    .padding-tablet();
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
 }
 
 .page-header__wrapper {
@@ -7,6 +20,11 @@
   .flex(space-between; center);
   padding-bottom: 15px;
   padding-top: 15px;
+
+  @media (min-width: @tablet-width) {
+    padding: 0;
+    width: 33%;
+  }
 }
 
 .page-header__logo {
@@ -24,4 +42,8 @@
   background-position: center;
   border-left: none;
   border-right: none;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
 }
