--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -12,6 +12,10 @@
     padding-top: 30px;
     padding-bottom: 30px;
   }
+
+  @media (min-width: @desktop-width) {
+    .visually-hidden;
+  }
 }
 
 .contacts__invite {
