--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -11,6 +11,11 @@
     justify-content: space-between;
     align-items: center;
   }
+
+  @media (min-width: @desktop-width) {
+    width: 1440px;
+    .padding-desktop;
+  }
 }
 
 .page-footer__logo {
