--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -16,6 +16,11 @@
     width: 528px;
     padding-bottom: 30px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin: 0;
+    margin-left: 80px;
+  }
 }
 
 .page-main__title--catalog {
@@ -25,4 +30,8 @@
   padding-bottom: 40px;
   border-bottom: 1px solid @special_grey_1;
   justify-content: flex-start;
+
+  @media (min-width: @tablet-width) {
+    .font_oswald-black-norm(60px; 60px);
+  }
 }
