--- a/source/less/global/mixins.less
+++ b/source/less/global/mixins.less
@@ -102,6 +102,11 @@
   box-sizing: border-box;
 }
 
+.padding-desktop() {
+  padding: 0 110px;
+  box-sizing: border-box;
+}
+
 .reset-indents() {
   margin: 0;
   padding: 0;
