--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -1,5 +1,15 @@
 .example {
   background-color: @special_grey_4;
+
+  @media (min-width: @tablet-width) {
+    background-size: 768px 460px;
+    background-position: bottom;
+  }
+
+  @media (min-width: @tablet-width) {
+    background-size: 1440px 460px;
+    background-position: bottom;
+  }
 }
 
 .example__wrapper {
@@ -10,7 +20,37 @@
 
   @media (min-width: @tablet-width) {
     width: 768px;
+    height: 1080px;
     .padding-tablet();
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1440px;
+    height: 660px;
+    .padding-desktop();
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+}
+
+.example__desktop-wrapper {
+  @media (min-width: @desktop-width) {
+    .margin-auto;
+    .flex(space-between; center);
+  }
+}
+
+.example__desktop-container-1 {
+  @media (min-width: @desktop-width) {
+    width: 40%;
+  }
+}
+
+.example__desktop-container-2 {
+  @media (min-width: @desktop-width) {
+    width: 40%;
   }
 }
 
@@ -22,19 +62,38 @@
 .example__subtitle--style {
   .flex(flex-start);
   .font_oswald-black-norm(36px; 40px);
+
+  @media (min-width: @tablet-width) {
+    .font_oswald-black-norm(60px; 60px);
+  }
 }
 
 .example__text {
   margin: 0;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
 }
 
 .example__text--style {
   .font_arial(14px; 18px);
+
+  @media (min-width: @tablet-width) {
+    .font_arial(16px; 24px);
+  }
 }
 
 .example__container {
   @media (min-width: @tablet-width) {
     .flex(space-between; center);
+  }
+
+  @media (min-width: @desktop-width) {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
 
@@ -65,6 +124,10 @@
 .example__value--style {
   .flex;
   .font_oswald-black-big(24px; 24px);
+
+  @media (min-width: @tablet-width) {
+    .font_oswald-black-big(30px; 37px);
+  }
 }
 
 .example__description {
@@ -75,6 +138,10 @@
   .flex;
   width: 85px;
   .font_arial(12px; 12px);
+
+  @media (min-width: @tablet-width) {
+    .font_arial(14px; 14px);
+  }
 }
 
 .example__price {
@@ -85,10 +152,20 @@
     margin: 0;
     width: 19%;
   }
+
+  @media (min-width: @desktop-width) {
+    width: 100%;
+    margin-top: 50px;
+    justify-content: stretch;
+  }
 }
 
 .example__price--style {
   .font_oswald-black-big(14px; 20px);
+
+  @media (min-width: @desktop-width) {
+    .font_oswald-black-big(20px; 20px);
+  }
 }
 
 .example__slider {
@@ -97,6 +174,22 @@
 
 .example__slider-list {
   .list-style;
+
+  @media (min-width: @tablet-width) {
+    .flex;
+  }
+}
+
+.example__slide--before {
+  @media (min-width: @tablet-width) {
+    transform: scale(2);
+    margin-top: 200px;
+    margin-bottom: 100px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 100px;
+  }
 }
 
 .example__slide--after {
@@ -117,6 +210,10 @@
 .example__control--before,
 .example__control--after {
   .font_oswald-black-big(16px; 20px);
+
+  @media (min-width: @tablet-width) {
+    .font_oswald-black-big(20px; 30px);
+  }
 }
 
 .example__scale--style {
