--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -2,9 +2,18 @@
   position: relative;
   width: 320px;
   height: 476px;
-  background-image: url("../img/index-background-desktop-2.jpg");
-  background-repeat: no-repeat;
-  z-index: 1;
+
+  @media (min-width: @tablet-width) {
+    width: 768px;
+    height: 810px;
+    .padding-tablet();
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1440px;
+    height: 640px;
+    padding-top: 50px;
+  }
 
   &::before {
     content: "";
@@ -16,17 +25,45 @@
     left: 0;
     background-color: rgba(104, 183, 56, 0.85);
     background-size: 300px 302px;
+    z-index: 2;
 
     @media (min-width: @tablet-width) {
       display: none;
     }
+
+    @media (min-width: @desktop-width) {
+      display: block;
+      width: 720px;
+      height: 694px;
+      top: -105px;
+      left: 720px;
+    }
   }
 
-  @media (min-width: @tablet-width) {
-    width: 768px;
-    height: 810px;
-    .padding-tablet();
-    background: none;
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 320px;
+    height: 302px;
+    top: 0;
+    left: 0;
+    background-image: url("../img/index-background-desktop-2.jpg");
+    background-repeat: no-repeat;
+    z-index: 1;
+
+    @media (min-width: @tablet-width) {
+      display: none;
+    }
+
+    @media (min-width: @desktop-width) {
+      display: block;
+      width: 720px;
+      height: 694px;
+      top: -105px;
+      left: 720px;
+      background-size: cover;
+    }
   }
 }
 
@@ -41,15 +78,18 @@
   .flex();
   position: relative;
   .font_oswald-white-big(14px; 14px);
-}
 
-@media (min-width: @tablet-width) {
-  .promo__slogan--style {
+  @media (min-width: @tablet-width) {
     .font_oswald-black-big(20px; 20px);
     padding: 20px 0;
     width: 528px;
     justify-content: start;
     .margin-auto;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 0;
+    margin-left: 80px;
   }
 }
 
@@ -62,6 +102,12 @@
     transform: scale(2.3);
     top: 420px;
     left: 270px;
+  }
+
+  @media (min-width: @desktop-width) {
+    transform: scale(2);
+    top: 140px;
+    left: 720px;
   }
 }
 
