--- a/source/less/blocks/location.less
+++ b/source/less/blocks/location.less
@@ -1,8 +1,8 @@
 .location__wrapper {
-  .margin-auto;
+  margin: 0 auto;
 }
 
-.location__map--style {
+.map {
   display: flex;
   width: 320px;
   height: 362px;
