--- a/source/less/blocks/basic-products.less
+++ b/source/less/blocks/basic-products.less
@@ -1,9 +1,9 @@
 .basic-products__wrapper {
-  .margin-auto;
+  margin: 0 auto;
 
   @media (min-width: @tablet-width) {
     width: 768px;
-    .padding-tablet();
+    padding: @padding-tablet;
   }
 }
 
@@ -24,7 +24,7 @@
 }
 
 .basic-products__item-wrapper {
-  .padding-mobile;
+  padding: @padding-mobile;
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-content: start;
@@ -35,13 +35,11 @@
   align-self: center;
 }
 
-.basic-products__description {
-  margin-top: 0;
-}
-
-.basic-products__description--style {
+.description-more {
   .flex(flex-start);
-  .font_oswald-black-big(16px; 20px);
+  .font-main(16px; 20px);
+  margin-top: 0;
+  text-transform: uppercase;
 }
 
 .basic-products__list {
@@ -49,16 +47,18 @@
   grid-template-columns: repeat(2, auto);
   grid-template-rows: repeat(3, auto);
   justify-content: space-between;
-  .font_arial(12px; 16px);
+  .font-secondary(12px; 16px);
 }
 
 .basic-products__button {
-  .margin-auto;
+  margin: 0 auto;
   margin-top: 20px;
 }
 
 .button--basic-products-style {
-  .font_oswald-white-big(16px; 20px);
+  .font-main(16px; 20px);
+  color: @white;
+  text-transform: uppercase;
 }
 
 .basic-products__item-box {
@@ -66,7 +66,7 @@
   padding-top: 50px;
 }
 
-.basic-products__item-box::before {
+.item-box::before {
   content: "";
   position: absolute;
   width: 30px;
@@ -76,13 +76,13 @@
   left: 145px;
 }
 
-.basic-products__description--more,
-.basic-products__text {
+.basic-products__description-more {
   .flex();
 }
 
-.basic-products__text {
-  .font_arial(12px; 16px);
+.text-more {
+  .flex();
+  .font-secondary(12px; 16px);
 }
 
 .button--basic-products-more {
