--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,6 +1,6 @@
 .contacts__wrapper {
-  .margin-auto;
-  .padding-mobile;
+  margin: 0 auto;
+  padding: @padding-mobile;
   .flex;
   justify-content: space-between;
   padding-top: 30px;
@@ -8,7 +8,7 @@
 
   @media (min-width: @tablet-width) {
     width: 768px;
-    .padding-tablet;
+    padding: @padding-tablet;
     padding-top: 30px;
     padding-bottom: 30px;
   }
@@ -22,12 +22,13 @@
   margin: 0;
 }
 
-.contacts__invite--style {
-  .font_oswald-black-big(16px; 18px);
+.invite {
+  .font-main(16px; 18px);
+  text-transform: uppercase;
 }
 
-.contacts__address--style {
-  .font_arial(14px; 20px);
+.address {
+  .font-secondary(14px; 20px);
 }
 
 .contacts--background {
