--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -13,15 +13,15 @@
 }
 
 .example__wrapper {
-  .margin-auto;
-  .padding-mobile;
+  margin: 0 auto;
+  padding: @padding-mobile;
   padding-top: 30px;
   padding-bottom: 30px;
 
   @media (min-width: @tablet-width) {
     width: 768px;
     height: 1080px;
-    .padding-tablet();
+    padding: @padding-tablet;
     padding-top: 40px;
     padding-bottom: 40px;
   }
@@ -29,7 +29,7 @@
   @media (min-width: @desktop-width) {
     width: 1440px;
     height: 660px;
-    .padding-desktop();
+    padding: @padding-desktop;
     padding-top: 40px;
     padding-bottom: 40px;
   }
@@ -37,7 +37,7 @@
 
 .example__desktop-wrapper {
   @media (min-width: @desktop-width) {
-    .margin-auto;
+    margin: 0 auto;
     .flex(space-between; center);
   }
 }
@@ -54,21 +54,21 @@
   }
 }
 
-.example__subtitle {
+.example__example-subtitle {
   margin: 0;
   margin-bottom: 35px;
 }
 
-.example__subtitle--style {
+.example-subtitle {
   .flex(flex-start);
-  .font_oswald-black-norm(36px; 40px);
+  .font-main(36px; 40px);
 
   @media (min-width: @tablet-width) {
-    .font_oswald-black-norm(60px; 60px);
+    .font-main(60px; 60px);
   }
 }
 
-.example__text {
+.example__example-text {
   margin: 0;
 
   @media (min-width: @tablet-width) {
@@ -77,11 +77,11 @@
   }
 }
 
-.example__text--style {
-  .font_arial(14px; 18px);
+.example-text {
+  .font-secondary(14px; 18px);
 
   @media (min-width: @tablet-width) {
-    .font_arial(16px; 24px);
+    .font-secondary(16px; 24px);
   }
 }
 
@@ -107,7 +107,7 @@
   margin-bottom: 35px;
 }
 
-.example__item--style {
+.example-item {
   .flex;
   width: 124px;
   height: 64px;
@@ -117,35 +117,37 @@
   box-sizing: border-box;
 }
 
-.example__value {
+.example__example-value {
   margin-bottom: 8px;
 }
 
-.example__value--style {
+.example-value {
   .flex;
-  .font_oswald-black-big(24px; 24px);
+  .font-main(24px; 24px);
+  text-transform: uppercase;
 
   @media (min-width: @tablet-width) {
-    .font_oswald-black-big(30px; 37px);
+    .font-main(30px; 37px);
+    text-transform: uppercase;
   }
 }
 
-.example__description {
+.example__example-description {
   margin: 0;
 }
 
-.example__description--style {
+.example-description {
   .flex;
   width: 85px;
-  .font_arial(12px; 12px);
+  .font-secondary(12px; 12px);
 
   @media (min-width: @tablet-width) {
-    .font_arial(14px; 14px);
+    .font-secondary(14px; 14px);
   }
 }
 
-.example__price {
-  .margin-auto;
+.example__example-price {
+  margin: 0 auto;
   .flex();
 
   @media (min-width: @tablet-width) {
@@ -160,11 +162,13 @@
   }
 }
 
-.example__price--style {
-  .font_oswald-black-big(14px; 20px);
+.example-price {
+  .font-main(14px; 20px);
+  text-transform: uppercase;
 
   @media (min-width: @desktop-width) {
-    .font_oswald-black-big(20px; 20px);
+    .font-main(20px; 20px);
+    text-transform: uppercase;
   }
 }
 
@@ -180,7 +184,7 @@
   }
 }
 
-.example__slide--before {
+.example-slide--before {
   @media (min-width: @tablet-width) {
     transform: scale(2);
     margin-top: 200px;
@@ -192,31 +196,33 @@
   }
 }
 
-.example__slide--after {
+.example-slide--after {
   display: none;
 }
 
-.example__control {
+.example__example-control {
   .flex(space-around; center);
 
-  .margin-auto;
+  margin: 0 auto;
 }
 
-.example__control--style {
+.example-control {
   width: 228px;
   height: 40px;
 }
 
-.example__control--before,
-.example__control--after {
-  .font_oswald-black-big(16px; 20px);
+.example-control--before,
+.example-control--after {
+  .font-main(16px; 20px);
+  text-transform: uppercase;
 
   @media (min-width: @tablet-width) {
-    .font_oswald-black-big(20px; 30px);
+    .font-main(20px; 30px);
+    text-transform: uppercase;
   }
 }
 
-.example__scale--style {
+.example-scale {
   width: 84px;
   height: 14px;
   background-color: @white;
@@ -225,7 +231,7 @@
   box-sizing: border-box;
 }
 
-.example__bar--style {
+.example-bar {
   width: 35px;
   height: 6px;
   background-color: @basic_green;
