--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -1,11 +1,8 @@
 .page-form__title {
-  .padding-mobile;
-  margin: 20px 0;
-}
-
-.page-form__title--style {
+  padding: @padding-mobile;
   .flex(flex-start);
-  .font_oswald-black-norm(36px; 36px);
+  .font-main(36px; 36px);
   padding-top: 10px;
   padding-bottom: 10px;
+  margin: 20px 0;
 }
