--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -6,7 +6,7 @@
   @media (min-width: @tablet-width) {
     width: 768px;
     height: 810px;
-    .padding-tablet();
+    padding: @padding-tablet;
   }
 
   @media (min-width: @desktop-width) {
@@ -68,7 +68,7 @@
 }
 
 .promo__slogan {
-  .padding-mobile();
+  padding: @padding-mobile;
   z-index: 2;
   margin-top: 20px;
   margin-bottom: 30px;
@@ -77,14 +77,17 @@
 .promo__slogan--style {
   .flex();
   position: relative;
-  .font_oswald-white-big(14px; 14px);
+  .font-main(14px; 14px);
+  color: @white;
+  text-transform: uppercase;
 
   @media (min-width: @tablet-width) {
-    .font_oswald-black-big(20px; 20px);
+    .font-main(20px; 20px);
+    text-transform: uppercase;
     padding: 20px 0;
     width: 528px;
     justify-content: start;
-    .margin-auto;
+    margin: 0 auto;
   }
 
   @media (min-width: @desktop-width) {
@@ -112,8 +115,8 @@
 }
 
 .promo__button {
-  .margin-auto();
-  .padding-mobile();
+  margin: 0 auto;
+  padding: @padding-mobile;
   margin-top: 300px;
 
   @media (min-width: @tablet-width) {
@@ -125,12 +128,16 @@
 }
 
 .button--promo-style {
-  .font_oswald-white-big(14px; 14px);
+  .font-main(14px; 14px);
+  color: @white;
+  text-transform: uppercase;
 }
 
 @media (min-width: @tablet-width) {
   .button--promo-style {
-    .font_oswald-white-big(20px; 20px);
+    .font-main(20px; 20px);
+    color: @white;
+    text-transform: uppercase;
     width: 240px;
   }
 }
