--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,7 +2,6 @@
 
 @import "global/global.less";
 @import "global/fonts.less";
-@import "global/colors.less";
 @import "global/mixins.less";
 @import "global/variables.less";
 
@@ -20,11 +19,17 @@
 @import "blocks/contacts.less";
 @import "blocks/location.less";
 @import "blocks/page-footer.less";
+@import "blocks/social.less";
 
 // blocks/form
 
 @import "blocks/page-form.less";
 @import "blocks/form.less";
+@import "blocks/data.less";
+@import "blocks/scheme.less";
+@import "blocks/owner.less";
+@import "blocks/comment.less";
+@import "blocks/additive.less";
 
 // bloks/catalog
 
