--- a/source/less/blocks/data.less
+++ b/source/less/blocks/data.less
@@ -24,10 +24,11 @@
     font: inherit;
     color: @special_dark_grey;
     text-transform: uppercase;
+    padding-left: 15px;
   }
 }
 
-.data__wrapper {
+.data__field-wrapper {
   display: grid;
   grid-template-columns: auto 1fr;
   column-gap: 15px;
