--- a/source/less/blocks/comment.less
+++ b/source/less/blocks/comment.less
@@ -7,4 +7,29 @@
 .comment {
   .font-main(24px; 26px);
   padding-top: 40px;
+
+  legend {
+    position: relative;
+  }
+
+  legend::after {
+    content: "";
+    position: absolute;
+    width: 160px;
+    height: 2px;
+    background-color: @basic_green;
+    left: 140px;
+    top: 15px;
+  }
+
+  textarea {
+    .font-main(16px; 18px);
+    color: @special_dark_grey;
+    text-transform: uppercase;
+    width: 280px;
+    height: 150px;
+    padding: 10px 12px;
+    border: 1px solid @special_white_2;
+    resize: none;
+  }
 }
